--- a/public/css/style.css
+++ b/public/css/style.css
@@ -116,7 +116,6 @@ html, body{
 	display: block;
 }
 .comment{
-	position: relative;
 	top: 70px;
 }
 .comment-avatar,
@@ -125,11 +124,9 @@ html, body{
   border-radius: 50%;
   box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
   height: 80px;
-  left: 0;
   overflow: hidden;
-  position: absolute;
-  top: 0;
   width: 80px;
+  float: left;
 }
 
 .comment-form .comment-avatar img,
@@ -145,7 +142,6 @@ html, body{
   box-shadow: 0 1px 1px rgba(0, 0, 0, .15);
   margin-left: 100px;
   min-height: 60px;
-  position: relative;
   padding: 15px;
 }
 
